--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -21,34 +21,35 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:orientation="vertical"
-                android:background="@color/purple_700">
+                android:background="@color/napbar"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/textView_change_pwd_head"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
-                    android:textColor="@color/white"
                     android:text="Change your Password"
                     android:textAlignment="center"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                    android:textColor="@color/black" />
 
                 <TextView
                     android:id="@+id/textView_change_pwd_instruction"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_below="@id/textView_change_pwd_head"
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="30dp"
-                    android:textColor="@color/white"
-                    android:layout_below="@id/textView_change_pwd_head"
                     android:text="You can change your password after authenticating your profile by entering your current password"
                     android:textAlignment="center"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Menu" />
+                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
+                    android:textColor="@color/black" />
 
             </LinearLayout>
 
             <RelativeLayout
+                android:id="@+id/box_box"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
@@ -69,35 +70,37 @@
                         android:id="@+id/imageViewCurrPwd"
                         android:layout_width="35dp"
                         android:layout_height="35dp"
+                        android:src="@drawable/password"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
                          />
 
-                    <TextView
-                        android:id="@+id/textView_change_pwd_current"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+<!--                    <TextView-->
+<!--                        android:id="@+id/textView_change_pwd_current"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
 
-                        android:layout_toEndOf="@id/imageViewCurrPwd"
-                        android:padding="6dp"
-                        android:text="Current Password*" />
+<!--                        android:layout_toEndOf="@id/imageViewCurrPwd"-->
+<!--                        android:padding="6dp"-->
+<!--                        android:text="Current Password*" />-->
 
-                    <View
-                        android:id="@+id/divider_curr_pwd"
-                        android:layout_width="250dp"
-                        android:layout_height="1dp"
-                        android:layout_below="@id/textView_change_pwd_current"
-                        android:layout_centerHorizontal="true"
-                        android:background="@android:color/darker_gray" />
+<!--                    <View-->
+<!--                        android:id="@+id/divider_curr_pwd"-->
+<!--                        android:layout_width="250dp"-->
+<!--                        android:layout_height="1dp"-->
+<!--                        android:layout_below="@id/textView_change_pwd_current"-->
+<!--                        android:layout_centerHorizontal="true"-->
+<!--                        android:background="@android:color/darker_gray" />-->
 
                     <EditText
                         android:id="@+id/editText_change_pwd_current"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/textView_change_pwd_current"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
+                        android:layout_below="@id/imageViewCurrPwd"
+                        android:layout_marginStart="13dp"
+                        android:layout_marginTop="-36dp"
+                        android:layout_marginBottom="8dp"
                         android:layout_toEndOf="@id/imageViewCurrPwd"
                         android:background="@android:color/transparent"
                         android:hint="enter your password"
@@ -105,13 +108,12 @@
                         android:minHeight="48dp"
                         android:padding="6dp"
                         android:textCursorDrawable="@drawable/edittextcursor"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"/>
 
                     <ImageView
                     android:id="@+id/imageView_show_hide_curr_pwd"
                     android:layout_width="33dp"
                     android:layout_height="33dp"
-                    android:layout_below="@id/textView_change_pwd_current"
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="10dp" />
@@ -125,6 +127,7 @@
                     android:layout_marginLeft="70dp"
                     android:layout_marginTop="30dp"
                     android:layout_marginRight="70dp"
+                    android:background="@drawable/grey"
                     android:text="Authenticate"
                     android:textAlignment="center" />
 
@@ -170,33 +173,21 @@
                         android:layout_width="35dp"
                         android:layout_height="35dp"
                         android:layout_centerVertical="true"
+                        android:background="@drawable/password"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
                         />
 
-                    <TextView
-                        android:id="@+id/textView_change_pwd_new"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_toEndOf="@id/imageViewNewPwd"
-                        android:padding="6dp"
-                        android:text="New Password*" />
 
-                    <View
-                        android:id="@+id/divider_pwd"
-                        android:layout_width="250dp"
-                        android:layout_height="1dp"
-                        android:layout_below="@id/textView_change_pwd_new"
-                        android:layout_centerHorizontal="true"
-                        android:background="@android:color/darker_gray" />
 
                     <EditText
                         android:id="@+id/editText_change_pwd_new"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/textView_change_pwd_new"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
+                        android:layout_below="@id/imageViewNewPwd"
+                        android:layout_marginStart="13dp"
+                        android:layout_marginTop="-36dp"
+                        android:layout_marginBottom="8dp"
                         android:layout_toEndOf="@id/imageViewNewPwd"
                         android:background="@android:color/transparent"
                         android:hint="enter your new password"
@@ -211,7 +202,6 @@
                         android:id="@+id/imageView_show_hide_new_pwd"
                         android:layout_width="33dp"
                         android:layout_height="33dp"
-                        android:layout_below="@id/textView_change_pwd_new"
                         android:layout_alignParentEnd="true"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="10dp" />
@@ -230,33 +220,35 @@
                         android:layout_width="35dp"
                         android:layout_height="35dp"
                         android:layout_centerVertical="true"
+                        android:background="@drawable/password"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
                         />
 
-                    <TextView
-                        android:id="@+id/textView_change_pwd_new_confirm"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_toEndOf="@id/imageViewNewPwdConfirm"
-                        android:padding="6dp"
-                        android:text="Confirm New Password*" />
+<!--                    <TextView-->
+<!--                        android:id="@+id/textView_change_pwd_new_confirm"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_toEndOf="@id/imageViewNewPwdConfirm"-->
+<!--                        android:padding="6dp"-->
+<!--                        android:text="Confirm New Password*" />-->
 
-                    <View
-                        android:id="@+id/divider_pwd_confirm"
-                        android:layout_width="250dp"
-                        android:layout_height="1dp"
-                        android:layout_below="@id/textView_change_pwd_new_confirm"
-                        android:layout_centerHorizontal="true"
-                        android:background="@android:color/darker_gray" />
+<!--                    <View-->
+<!--                        android:id="@+id/divider_pwd_confirm"-->
+<!--                        android:layout_width="250dp"-->
+<!--                        android:layout_height="1dp"-->
+<!--                        android:layout_below="@id/textView_change_pwd_new_confirm"-->
+<!--                        android:layout_centerHorizontal="true"-->
+<!--                        android:background="@android:color/darker_gray" />-->
 
                     <EditText
                         android:id="@+id/editText_change_pwd_new_confirm"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/textView_change_pwd_new_confirm"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
+                        android:layout_below="@id/imageViewNewPwdConfirm"
+                        android:layout_marginStart="13dp"
+                        android:layout_marginTop="-36dp"
+                        android:layout_marginBottom="8dp"
                         android:layout_toEndOf="@id/imageViewNewPwdConfirm"
                         android:background="@android:color/transparent"
                         android:hint="confirm your new password"
@@ -270,7 +262,6 @@
                         android:id="@+id/imageView_show_hide_new_pwd_confirm"
                         android:layout_width="33dp"
                         android:layout_height="33dp"
-                        android:layout_below="@id/textView_change_pwd_new_confirm"
                         android:layout_alignParentEnd="true"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="10dp" />
@@ -282,6 +273,7 @@
                     android:layout_width="190dp"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/RL_new_pwd_confirm"
+                    android:background="@drawable/grey"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="30dp"
                     android:text="Change Password" />
