--- a/app/src/main/res/layout/activity_delete_profile.xml
+++ b/app/src/main/res/layout/activity_delete_profile.xml
@@ -23,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:orientation="vertical"
-                android:background="@color/purple_700">
+                android:background="@color/napbar">
 
                 <TextView
                     android:id="@+id/textView_delete_user_head"
@@ -32,7 +32,7 @@
                     android:layout_marginTop="30dp"
                     android:text="Delete your Profile"
                     android:textAlignment="center"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
                 <TextView
@@ -44,7 +44,7 @@
                     android:textAlignment="center"
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="30dp"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textAppearance="@style/TextAppearance.AppCompat.Menu" />
 
             </LinearLayout>
@@ -73,31 +73,32 @@
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
-                        android:src="@drawable/baseline_lock_24" />
+                        android:src="@drawable/password" />
 
-                    <TextView
-                        android:id="@+id/textView_delete_user_pwd"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_toEndOf="@id/imageViewPwd"
-                        android:padding="6dp"
-                        android:text="Password*" />
+<!--                    <TextView-->
+<!--                        android:id="@+id/textView_delete_user_pwd"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_toEndOf="@id/imageViewPwd"-->
+<!--                        android:padding="6dp"-->
+<!--                        android:text="Password*" />-->
 
-                    <View
-                        android:id="@+id/divider_pwd"
-                        android:layout_width="250dp"
-                        android:layout_height="1dp"
-                        android:layout_below="@id/textView_delete_user_pwd"
-                        android:layout_centerHorizontal="true"
-                        android:background="@android:color/darker_gray" />
+<!--                    <View-->
+<!--                        android:id="@+id/divider_pwd"-->
+<!--                        android:layout_width="250dp"-->
+<!--                        android:layout_height="1dp"-->
+<!--                        android:layout_below="@id/textView_delete_user_pwd"-->
+<!--                        android:layout_centerHorizontal="true"-->
+<!--                        android:background="@android:color/darker_gray" />-->
 
                     <EditText
                         android:id="@+id/editText_delete_user_pwd"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/textView_delete_user_pwd"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
+                        android:layout_below="@id/imageViewPwd"
+                        android:layout_marginStart="13dp"
+                        android:layout_marginTop="-36dp"
+                        android:layout_marginBottom="8dp"
                         android:layout_toEndOf="@id/imageViewPwd"
                         android:background="@android:color/transparent"
                         android:hint="enter your password"
@@ -111,7 +112,6 @@
                         android:id="@+id/imageView_show_hide_pwd"
                         android:layout_width="33dp"
                         android:layout_height="33dp"
-                        android:layout_below="@id/textView_delete_user_pwd"
                         android:layout_alignParentEnd="true"
                         android:layout_marginTop="10dp"
                         android:layout_marginRight="10dp" />
@@ -123,6 +123,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/RL_pwd"
                     android:layout_centerHorizontal="true"
+                    android:background="@drawable/grey"
                     android:layout_marginTop="30dp"
                     android:text="Authenticate" />
 
@@ -162,6 +163,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/textView_delete_user_authenticated"
                     android:layout_centerHorizontal="true"
+                    android:background="@drawable/grey"
                     android:layout_marginTop="30dp"
                     android:text="Delete Profile" />
 
