--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -10,7 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/light_blue"
+        android:background="@color/primary"
         tools:context=".ForgotPasswordActivity">
 
         <LinearLayout
@@ -21,7 +21,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
-                android:background="@color/teal_250">
+                android:background="@color/napbar">
 
                 <TextView
                     android:id="@+id/textView_password_reset_head"
@@ -73,34 +73,35 @@
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
-                        android:src="@drawable/ic_email" />
+                        android:src="@drawable/email" />
 
-                    <TextView
-                        android:id="@+id/textView_password_reset_email"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_toEndOf="@id/imageViewEmail"
-                        android:padding="6dp"
-                        android:text="Email*"
-                        android:textStyle="bold"
-                        android:textColor="@color/black"/>
+<!--                    <TextView-->
+<!--                        android:id="@+id/textView_password_reset_email"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_toEndOf="@id/imageViewEmail"-->
+<!--                        android:padding="6dp"-->
+<!--                        android:text="Email*"-->
+<!--                        android:textStyle="bold"-->
+<!--                        android:textColor="@color/black"/>-->
 
-                    <View
-                        android:id="@+id/divider_email"
-                        android:layout_width="250dp"
-                        android:layout_height="1dp"
-                        android:layout_below="@id/textView_password_reset_email"
-                        android:layout_centerHorizontal="true"
-                        android:background="@android:color/darker_gray" />
+<!--                    <View-->
+<!--                        android:id="@+id/divider_email"-->
+<!--                        android:layout_width="250dp"-->
+<!--                        android:layout_height="1dp"-->
+<!--                        android:layout_below="@id/textView_password_reset_email"-->
+<!--                        android:layout_centerHorizontal="true"-->
+<!--                        android:background="@android:color/darker_gray" />-->
 
 
                     <EditText
                         android:id="@+id/editText_password_reset_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/textView_password_reset_email"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
+                        android:layout_below="@id/imageViewEmail"
+                        android:layout_marginStart="13dp"
+                        android:layout_marginTop="-36dp"
+                        android:layout_marginBottom="8dp"
                         android:layout_toEndOf="@id/imageViewEmail"
                         android:background="@android:color/transparent"
                         android:hint="enter your registered email"
@@ -122,7 +123,7 @@
                     android:text="Reset Password"
                     android:textStyle="bold"
                     android:textColor="@color/black"
-                    android:backgroundTint="@color/light_blue"/>
+                    android:background="@drawable/grey"/>
 
                 <ProgressBar
                     android:id="@+id/progressbar_forgot"
