--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -66,7 +66,7 @@
                         android:layout_width="35dp"
                         android:layout_height="35dp"
                         android:id="@+id/imageViewEmail"
-                        android:src="@drawable/ic_email"
+                        android:src="@drawable/email"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"/>
@@ -115,10 +115,10 @@
                     android:layout_marginTop="10dp">
 
                     <ImageView
-                        android:layout_width="45dp"
-                        android:layout_height="50dp"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
                         android:id="@+id/imageViewPwd"
-                        android:src="@drawable/baseline_lock_24"
+                        android:src="@drawable/password"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"/>
