--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="12dp"
-        android:background="@drawable/bottom_nap"
+        android:background="@color/napbar"
         app:menu="@menu/bottom_nav_menu" />
 
 </RelativeLayout>
