--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -72,7 +72,7 @@
                     android:layout_height="60dp"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentLeft="true"
-                    android:src="@drawable/phonecall"
+                    android:src="@drawable/contact"
                     android:contentDescription="TODO" />
 
                 <LinearLayout
@@ -91,7 +91,7 @@
                         android:text="6291526612"
                         android:textStyle="bold"
                         android:textColor="@android:color/black"
-                        android:textSize="30sp" />
+                        android:textSize="25sp" />
 
 
                 </LinearLayout>
@@ -103,9 +103,11 @@
                     android:layout_below="@id/lin_1"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentLeft="true"
+                    android:layout_marginStart="1dp"
+                    android:layout_marginLeft="1dp"
                     android:layout_marginTop="15dp"
-                    android:src="@drawable/ic_email"
-                    android:contentDescription="TODO" />
+                    android:contentDescription="TODO"
+                    android:src="@drawable/email" />
 
                 <LinearLayout
                     android:id="@+id/lin_2"
@@ -153,6 +155,52 @@
                     >
 
 
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <RelativeLayout
+                            android:id="@+id/imgProfile"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="250dp">
+
+                            <ImageView
+                                android:id="@+id/facebook"
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
+                                android:layout_centerVertical="true"
+                                android:src="@drawable/facebook" />
+
+                            <ImageView
+                                android:id="@+id/instagram"
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
+                                android:layout_marginLeft="55dp"
+                                android:contentDescription="TODO"
+                                android:src="@drawable/instagram" />
+
+                            <ImageView
+                                android:id="@+id/youtube"
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
+                                android:layout_marginLeft="110dp"
+                                android:contentDescription="TODO"
+                                android:src="@drawable/youtube" />
+
+                            <ImageView
+                                android:id="@+id/share"
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
+                                android:layout_marginLeft="165dp"
+                                android:contentDescription="TODO"
+                                android:src="@drawable/share" />
+
+                        </RelativeLayout>
+
+                    </RelativeLayout>
+
                     <TextView
                         android:id="@+id/send_your_message"
                         android:layout_width="wrap_content"
@@ -172,57 +220,12 @@
                     android:layout_width="120dp"
                     android:layout_height="50dp"
                     android:text="Contact"
-
+                    android:background="@drawable/grey"
                     android:layout_below="@id/lin_3"
                     android:layout_centerHorizontal="true"
                     />
 
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <RelativeLayout
-                        android:layout_marginTop="250dp"
-                        android:id="@+id/imgProfile"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <ImageView
-                            android:id="@+id/facebook"
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:layout_centerVertical="true"
-                            android:src="@drawable/facebook" />
-
-                        <ImageView
-                            android:id="@+id/instagram"
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:layout_marginLeft="55dp"
-                            android:contentDescription="TODO"
-                            android:src="@drawable/instagram" />
-
-                        <ImageView
-                            android:id="@+id/youtube"
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:layout_marginLeft="110dp"
-                            android:contentDescription="TODO"
-                            android:src="@drawable/youtube" />
-
-                        <ImageView
-                            android:id="@+id/share"
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:layout_marginLeft="165dp"
-                            android:contentDescription="TODO"
-                            android:src="@drawable/share" />
-
-                    </RelativeLayout>
-
-                </RelativeLayout>
             </RelativeLayout>
 
         </RelativeLayout>
