--- a/app/src/main/res/layout/activity_update_email.xml
+++ b/app/src/main/res/layout/activity_update_email.xml
@@ -22,7 +22,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:background="@color/purple_700"
+                android:background="@color/napbar"
                 android:orientation="vertical">
 
                 <TextView
@@ -33,7 +33,7 @@
                     android:text="Update your Email Address"
                     android:textAlignment="center"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/black" />
 
                 <TextView
                     android:id="@+id/textView_update_email_instruction"
@@ -44,7 +44,7 @@
                     android:text="You can update your email address after you authenticate your profile by entering your password."
                     android:textAlignment="center"
                     android:textAppearance="@style/TextAppearance.AppCompat.Menu"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/black" />
 
             </LinearLayout>
 
@@ -74,37 +74,38 @@
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
-                        android:src="@drawable/ic_email" />
+                        android:src="@drawable/email" />
 
-                    <TextView
-                        android:id="@+id/textView_update_email"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_toEndOf="@id/imageViewEmail"
-                        android:padding="6dp"
-                        android:text="Current Email" />
+<!--                    <TextView-->
+<!--                        android:id="@+id/textView_update_email"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_centerHorizontal="true"-->
+<!--                        android:layout_toEndOf="@id/imageViewEmail"-->
+<!--                        android:padding="6dp"-->
+<!--                        android:text="Current Email" />-->
 
-                    <View
-                        android:id="@+id/divider_email"
-                        android:layout_width="250dp"
-                        android:layout_height="1dp"
-                        android:layout_below="@id/textView_update_email"
-                        android:layout_centerHorizontal="true"
-                        android:background="@android:color/darker_gray" />
+<!--                    <View-->
+<!--                        android:id="@+id/divider_email"-->
+<!--                        android:layout_width="250dp"-->
+<!--                        android:layout_height="1dp"-->
+<!--                        android:layout_below="@id/textView_update_email"-->
+<!--                        android:layout_centerHorizontal="true"-->
+<!--                        android:background="@android:color/darker_gray" />-->
 
                     <TextView
                         android:id="@+id/textView_update_email_old"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/textView_update_email"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
+                        android:layout_below="@id/imageViewEmail"
+                        android:layout_marginStart="13dp"
+                        android:layout_marginTop="-36dp"
+                        android:layout_marginBottom="8dp"
                         android:layout_toEndOf="@id/imageViewEmail"
                         android:background="@android:color/transparent"
+                        android:hint="previous email"
                         android:padding="6dp"
                         android:textColor="#555555"
-                        android:hint="old email"
                         android:textSize="16sp" />
                 </RelativeLayout>
 
@@ -123,31 +124,32 @@
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
-                        android:src="@drawable/baseline_lock_24" />
+                        android:src="@drawable/password" />
 
-                    <TextView
-                        android:id="@+id/textView_update_email_verify_password"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_toEndOf="@id/imageViewPwd"
-                        android:padding="6dp"
-                        android:text="Password*" />
+<!--                    <TextView-->
+<!--                        android:id="@+id/textView_update_email_verify_password"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_toEndOf="@id/imageViewPwd"-->
+<!--                        android:padding="6dp"-->
+<!--                        android:text="Password*" />-->
 
-                    <View
-                        android:id="@+id/divider_pwd"
-                        android:layout_width="250dp"
-                        android:layout_height="1dp"
-                        android:layout_below="@id/textView_update_email_verify_password"
-                        android:layout_centerHorizontal="true"
-                        android:background="@android:color/darker_gray" />
+<!--                    <View-->
+<!--                        android:id="@+id/divider_pwd"-->
+<!--                        android:layout_width="250dp"-->
+<!--                        android:layout_height="1dp"-->
+<!--                        android:layout_below="@id/textView_update_email_verify_password"-->
+<!--                        android:layout_centerHorizontal="true"-->
+<!--                        android:background="@android:color/darker_gray" />-->
 
                     <EditText
                         android:id="@+id/editText_update_email_verify_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/textView_update_email_verify_password"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
+                        android:layout_below="@id/imageViewPwd"
+                        android:layout_marginStart="13dp"
+                        android:layout_marginTop="-36dp"
+                        android:layout_marginBottom="8dp"
                         android:layout_toEndOf="@id/imageViewPwd"
                         android:background="@android:color/transparent"
                         android:hint="enter your password"
@@ -161,7 +163,6 @@
                         android:id="@+id/imageView_show_hide_pwd"
                         android:layout_width="33dp"
                         android:layout_height="33dp"
-                        android:layout_below="@id/textView_update_email_verify_password"
                         android:layout_alignParentEnd="true"
                         android:layout_marginTop="10dp"
                         android:layout_marginRight="10dp" />
@@ -172,6 +173,7 @@
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/RL_pwd"
+                    android:background="@drawable/grey"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="20dp"
                     android:text="Authenticate" />
@@ -220,31 +222,32 @@
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
-                        android:src="@drawable/ic_email" />
+                        android:src="@drawable/email" />
 
-                    <TextView
-                        android:id="@+id/textView_update_email_new"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_toEndOf="@id/imageViewNewEmail"
-                        android:padding="6dp"
-                        android:text="New Email*" />
+<!--                    <TextView-->
+<!--                        android:id="@+id/textView_update_email_new"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_toEndOf="@id/imageViewNewEmail"-->
+<!--                        android:padding="6dp"-->
+<!--                        android:text="New Email*" />-->
 
-                    <View
-                        android:id="@+id/divider_new_email"
-                        android:layout_width="250dp"
-                        android:layout_height="1dp"
-                        android:layout_below="@id/textView_update_email_new"
-                        android:layout_centerHorizontal="true"
-                        android:background="@android:color/darker_gray" />
+<!--                    <View-->
+<!--                        android:id="@+id/divider_new_email"-->
+<!--                        android:layout_width="250dp"-->
+<!--                        android:layout_height="1dp"-->
+<!--                        android:layout_below="@id/textView_update_email_new"-->
+<!--                        android:layout_centerHorizontal="true"-->
+<!--                        android:background="@android:color/darker_gray" />-->
 
                     <EditText
                         android:id="@+id/editText_update_email_new"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/textView_update_email_new"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
+                        android:layout_below="@id/imageViewNewEmail"
+                        android:layout_marginStart="13dp"
+                        android:layout_marginTop="-36dp"
+                        android:layout_marginBottom="8dp"
                         android:layout_toEndOf="@id/imageViewNewEmail"
                         android:background="@android:color/transparent"
                         android:hint="enter your new email address"
@@ -260,6 +263,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/RL_new_email"
                     android:layout_centerHorizontal="true"
+                    android:background="@drawable/grey"
                     android:layout_marginTop="20dp"
                     android:text="Update Email" />
 
