--- a/app/src/main/res/layout/fragment_user_chat.xml
+++ b/app/src/main/res/layout/fragment_user_chat.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserChatFragment">
+    tools:context=".UserChatFragment"
+    android:background="@color/primary">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:background="#eeeeef"
+        android:background="@color/primary"
 
         />
 
@@ -43,7 +44,7 @@
         android:layout_height="match_parent"
         android:layout_above="@id/sendFab"
         android:layout_below="@id/toolbar"
-        android:background="@color/light_blue1" />
+        android:background="@color/white" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
