--- a/app/src/main/res/layout/message.xml
+++ b/app/src/main/res/layout/message.xml
@@ -8,7 +8,7 @@
     android:layout_marginTop="15dp"
     android:paddingTop="10dp"
     app:cardElevation="10dp"
-    android:backgroundTint="#eeeeef"
+    android:background="@color/primary"
 
 
     >
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:background="@color/light_blue1"
+        android:background="@color/white"
         >
 
         <TextView
