--- a/app/src/main/res/layout/sender_message.xml
+++ b/app/src/main/res/layout/sender_message.xml
@@ -8,14 +8,14 @@
     android:layout_marginTop="15dp"
     android:paddingTop="10dp"
     app:cardElevation="10dp"
-    android:backgroundTint="#feeeee"
+    android:background="@color/primary"
 
     >
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        android:background="@color/white"
         >
 
         <TextView
@@ -23,13 +23,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+
+            android:layout_marginBottom="20dp"
             android:text="username"
-            android:textSize="18dp"
             android:textColor="@color/purple_500"
-
-            android:layout_margin="20dp"
-
-            />
+            android:textSize="18dp" />
 
         <TextView
             android:id="@+id/tvMessage"
@@ -52,7 +53,7 @@
             android:layout_height="wrap_content"
 
             android:text="Time"
-
+            android:textColor="@color/black"
             android:layout_alignParentRight="true"
             android:layout_marginRight="30dp"
             android:layout_marginTop="10dp"
