--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,7 +27,8 @@
     <color name="security">#D95F69</color>
     <color name="yellow1">#DFD5AF</color>
 
-    <color name="napbar">#385c54</color>
+
+    <color name="napbar">#2196F3</color>
     <color name="light_blue_600">#FF039BE5</color>
     <color name="light_blue_900">#FF01579B</color>
     <color name="light_blue_A200">#FF40C4FF</color>
